re PR target/42891 (ice in extract_insn, at recog.c:2097)

PR target/42891
	* config/i386/i386.c (ix86_expand_int_movcc): Convert tmp to SImode
	in the call to gen_x86_movsicc_0_m1.

testsuite/ChangeLog:

	PR target/42891
	* gcc.target/i386/pr42891.c: New test.

From-SVN: r156327